--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,6 @@
 version: "3.7"
 
-x-logging:
-  &default-logging
+x-logging: &default-logging
   driver: "json-file"
   options:
     max-size: "50m"
@@ -21,6 +20,7 @@ services:
     volumes:
       - "bitcoin_datadir:/root/.bitcoin"
     restart: always
+    platform: linux/amd64
 
   lnd:
     container_name: "lnd"
@@ -34,35 +34,36 @@ services:
     environment:
       RPCPASSWORD: $RPCPASSWORD
     command: [
-      "--bitcoin.active",
-      "--bitcoin.signet",
-      "--bitcoin.node=bitcoind",
-      "--maxpendingchannels=10",
-      "--rpclisten=0.0.0.0:10009",
-      "--restlisten=0.0.0.0:8080",
-      "--bitcoind.rpchost=bitcoind:38332",
-      "--bitcoind.rpcuser=bitcoin",
-      "--bitcoind.rpcpass=$RPCPASSWORD",
-      "--bitcoind.zmqpubrawblock=tcp://bitcoind:48332",
-      "--bitcoind.zmqpubrawtx=tcp://bitcoind:48333",
-      "--db.bolt.auto-compact",
-      "--db.prune-revocation",
-      "--alias=My Private Faucet",
-      #      "--externalip=mutinynet.com",
-      #      "--externalip=gfg7fwat27mnsmlog7wbgi6a53f2b5rj56bwokcfk45bacnb4z5kt5ad.onion",
-      #      "--tlsextradomain=mutinynet.com",
-      "--tlsextradomain=lnd",
-      "--protocol.option-scid-alias",
-      "--protocol.wumbo-channels",
-      "--accept-keysend",
-      "--minchansize=25000",
-      "--noseedbackup",
-      "--gc-canceled-invoices-on-startup",
-      "--coin-selection-strategy=random",
-      "--protocol.custom-message=513",
-      "--protocol.custom-nodeann=39",
-      "--protocol.custom-init=39",
-    ]
+        "--bitcoin.active",
+        "--bitcoin.signet",
+        "--bitcoin.node=bitcoind",
+        "--maxpendingchannels=10",
+        "--rpclisten=0.0.0.0:10009",
+        "--restlisten=0.0.0.0:8080",
+        "--bitcoind.rpchost=bitcoind:38332",
+        "--bitcoind.rpcuser=bitcoin",
+        "--bitcoind.rpcpass=$RPCPASSWORD",
+        "--bitcoind.zmqpubrawblock=tcp://bitcoind:48332",
+        "--bitcoind.zmqpubrawtx=tcp://bitcoind:48333",
+        "--db.bolt.auto-compact",
+        "--db.prune-revocation",
+        "--alias=My Private Faucet",
+        #      "--externalip=mutinynet.com",
+        #      "--externalip=gfg7fwat27mnsmlog7wbgi6a53f2b5rj56bwokcfk45bacnb4z5kt5ad.onion",
+        #      "--tlsextradomain=mutinynet.com",
+        "--tlsextradomain=lnd",
+        "--protocol.option-scid-alias",
+        "--protocol.wumbo-channels",
+        "--accept-keysend",
+        "--minchansize=25000",
+        "--noseedbackup",
+        "--gc-canceled-invoices-on-startup",
+        "--coin-selection-strategy=random",
+        "--protocol.custom-message=513",
+        "--protocol.custom-nodeann=39",
+        "--protocol.custom-init=39",
+      ]
+    platform: linux/amd64
     volumes:
       - lnd_datadir:/root/.lnd
     ports:
@@ -79,6 +80,7 @@ services:
     stop_grace_period: 1m
     volumes:
       - faucet_datadir:/root/.faucet
+    platform: linux/amd64
   faucet_backend:
     container_name: "faucet_backend"
     image: ghcr.io/mutinywallet/mutinynet-faucet-rs:master
@@ -102,6 +104,7 @@ services:
     stop_grace_period: 1m
     volumes:
       - lnd_datadir:/root/.lnd:ro
+    platform: linux/amd64
 
   nginx:
     image: nginx:1.21-alpine@sha256:686aac2769fd6e7bab67663fd38750c135b72d993d0bb0a942ab02ef647fc9c3
