--- a/.env.sample
+++ b/.env.sample
@@ -1,3 +1,7 @@
 RPCPASSWORD="my_rpc_password"
 
 NSEC="my-nsec"
+
+JWT_SECRET="my_jwt_secret"
+GITHUB_CLIENT_ID="my_github_client_id"
+GITHUB_CLIENT_SECRET="my_github_client_secret"
