--- a/nginx.conf
+++ b/nginx.conf
@@ -13,7 +13,7 @@ http {
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         }
 
-        location /api/ {
+        location ~ ^/(api|auth)/ {
             # Forward the original client IP
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
